; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_rpi.c_get_proc_address.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_rpi.c_get_proc_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"/opt/vc/lib/libGLESv2.so\00", align 1
@RTLD_LAZY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @get_proc_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_proc_address(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i8* @eglGetProcAddress(i32* %5)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %21, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @RTLD_LAZY, align 4
  %11 = call i8* @dlopen(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %10)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %9
  %15 = load i8*, i8** %4, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i8* @dlsym(i8* %15, i32* %16)
  store i8* %17, i8** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @dlclose(i8* %18)
  br label %20

20:                                               ; preds = %14, %9
  br label %21

21:                                               ; preds = %20, %1
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}

declare dso_local i8* @eglGetProcAddress(i32*) #1

declare dso_local i8* @dlopen(i8*, i32) #1

declare dso_local i8* @dlsym(i8*, i32*) #1

declare dso_local i32 @dlclose(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
